# blackjack-c-sdl

./: .gitignore  CMakeLists.txt  Makefile  README.md
img/: btn.xcf  btn_dbl.xcf  btn_double.xcf  btn_hit.xcf  btn_options.xcf  btn_split.xcf  btn_stand.xcf
img/src/: btn_aces.xcf  btn_aces_jacks.xcf  btn_back.xcf  btn_bet.xcf  btn_deal.xcf  btn_decks.xcf  btn_eights.xcf  btn_hit.xcf  btn_insure_no.xcf  btn_insure_yes.xcf  btn_jacks.xcf  btn_quit.xcf  btn_regular.xcf  btn_sevens.xcf  btn_split.xcf  btn_stand.xcf  btn_type.xcf  rules.xcf
include/: blackjack.h
src/: blackjack.c  main.c
